--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
+
+
+
+<h1>Timer/Stopwatch</h1>
+<select>
+<option value="timer">Timer</option>
+<option value="stopwatch">Stopwatch</option>
+</select>
+
+
+<div id="timer">
+  <h1>00:00:00</h1>
+  <button class="stop">Stop Timer</button>
+  <button class="set">Set Timer</button>
+</div>
+
+<div id="stopwatch">
+  <h1>00:00:00</h1>
+  <button class="start">Start</button>
+  <button class="stop">Stop</button>
+  <button class="reset">Reset</button>
+</div>
